# lv_port_win_mingw64_cmake_vscode

./: CMakeLists.txt  README.md
inc/: lv_conf.h
lib/cmake-lvgl/: CMakeLists.txt
src/: main.c
